Fixed the problem that the button is cut off when the window size is reduced.

--- a/src/client/styles/scss/_layout.scss
+++ b/src/client/styles/scss/_layout.scss
@@ -150,6 +150,7 @@ body {
 }
 
 .top-of-table-contents {
+  flex-wrap: wrap;
   .table-top-icon {
     width: 16px;
     height: 16px;
